fix link to sun, fix gap on content for md display

--- a/src/scss/_media-query.scss
+++ b/src/scss/_media-query.scss
@@ -25,7 +25,7 @@
   }
 
   .content {
-    --f-gap: 0;
+    --f-gap: 1rem;
   }
 
   .boxes {
