--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -10,7 +10,6 @@
 
   .planet-sun {
     grid-area: 1 / 1 / -1 / -1;
-    z-index: -1;
 
     a {
       height: 100%;
@@ -40,6 +39,10 @@
   }
   .planet-neptune {
     grid-area: 3 / 3 / 4 / -1;
+  }
+
+  li[class*='planet'] {
+    z-index: 3;
   }
 
   //Styling
